--- a/events.html
+++ b/events.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events | Supernova</title>
     <link rel="stylesheet" href="./styles/general.css">
-    <link rel="stylesheet" href="./styles/super.css">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/events.css">
     <link rel="stylesheet" href="./styles/nav.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/resnav.css">
 </head>
-
 <body>
     <header class="main-header">
         <div class="container">
@@ -71,7 +70,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main id="events">
         <section class="events">
             <div class="section_header past_event">
                 <header>
@@ -84,7 +83,7 @@
                     <div class="event_card">
                         <div class="flex">
                             <div class="card_img">
-                             <img src="./images/88077591_2523995711188975_8372393480550350848_n 1 (3).png" alt="">
+                             <img src="./images/event_pic.png">
                             </div> 
                              <div class="card_txt">
                                  <h1>
@@ -108,7 +107,7 @@
                     <div class="event_card">
                         <div class="flex">
                             <div class="card_img">
-                             <img src="./images/88077591_2523995711188975_8372393480550350848_n 1 (3).png" alt="">
+                             <img src="./images/event_pic.png">
                             </div> 
                              <div class="card_txt">
                                  <h1>
@@ -132,7 +131,7 @@
                      <div class="event_card">
                         <div class="flex">
                             <div class="card_img">
-                             <img src="./images/88077591_2523995711188975_8372393480550350848_n 1 (3).png" alt="">
+                             <img src="./images/event_pic.png">
                             </div> 
                              <div class="card_txt">
                                  <h1>
@@ -156,7 +155,7 @@
                       <div class="event_card">
                         <div class="flex">
                             <div class="card_img">
-                             <img src="./images/88077591_2523995711188975_8372393480550350848_n 1 (3).png" alt="">
+                             <img src="./images/event_pic.png">
                             </div> 
                              <div class="card_txt">
                                  <h1>
@@ -199,7 +198,7 @@
                         <div class="event_card">
                             <div class="flex">
                                 <div class="card_img">
-                                 <img src="./images/88077591_2523995711188975_8372393480550350848_n 1 (3).png" alt="">
+                                 <img src="./images/event_pic.png">
                                 </div> 
                                  <div class="card_txt">
                                      <h1>
@@ -223,7 +222,7 @@
                         <div class="event_card">
                             <div class="flex">
                                 <div class="card_img">
-                                 <img src="./images/88077591_2523995711188975_8372393480550350848_n 1 (3).png" alt="">
+                                 <img src="./images/event_pic.png">
                                 </div> 
                                  <div class="card_txt">
                                      <h1>
@@ -247,7 +246,7 @@
                          <div class="event_card">
                             <div class="flex">
                                 <div class="card_img">
-                                 <img src="./images/88077591_2523995711188975_8372393480550350848_n 1 (3).png" alt="">
+                                 <img src="./images/event_pic.png">
                                 </div> 
                                  <div class="card_txt">
                                      <h1>
@@ -271,7 +270,7 @@
                           <div class="event_card">
                             <div class="flex">
                                 <div class="card_img">
-                                 <img src="./images/88077591_2523995711188975_8372393480550350848_n 1 (3).png" alt="">
+                                 <img src="./images/event_pic.png">
                                 </div> 
                                  <div class="card_txt">
                                      <h1>
@@ -381,5 +380,6 @@
         </div>
     </footer>
     <script src="./script/nav.js"></script>
+    
 </body>
 </html>
