--- a/makerspace.html
+++ b/makerspace.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./styles/nav.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/resnav.css">
-    <!-- <meta name="description" content=""> -->
     <title>Maker Space | Supernova</title>
 </head>
 <body>
@@ -79,13 +78,13 @@
             <div class="box">
                 <div class="m_header dflex">
                     <div class="m_titel capitalize">
-                        <a href="#abdout">about</a>
+                        <a href="#abdout" class="ms_link" >about</a>
                     </div>
                     <div class="m_titel capitalize">
-                        <a href="#products">products</a>
+                        <a href="#products" class="ms_link" >products</a>
                     </div>
                     <div class="m_titel capitalize">
-                        <a href="#store">store</a>
+                        <a href="#store" class="ms_link" >store</a>
                     </div>
                 </div>
                 <div class="header_1 gradient">
@@ -104,7 +103,7 @@
     <section class="s2" id="about">
         <div class="box_s2">
             <div class="gradient_img">
-                <img src="./images/makerspace.png" alt="">
+                <img src="./images/makerspace.jpg" alt="">
             </div>
             <div class="container">
             
