--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                             <div class="container">
                                 <div class="flex">
                                     <div class="client_head">
-                                        <img src="./images/esraa 1.png" alt="">
+                                        <img src="./images/esraa.png" alt="">
                                         <h1>Esraa Adel</h1>
                                     </div>
                                     <div class="feedback"> 
