--- a/contact.html
+++ b/contact.html
@@ -16,64 +16,64 @@
 
 <body>
 
-    <header class="main-header">
-        <div class="container">
-            <nav class="main-nav">
-                <div class="row">
-                    <div class="logo">
-                        <a href="#">
-                            <div class="row">
-                                <img src="./images/white_logo.png" class="logo-img" alt="Supernova" title="Supernova title">
-                            <span>
-                                Supernova
-                            </span>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="nav-links">
-                        <ul class="nav-ul">
-                            <div class="row">
-                                <li><a href="/">home</a></li>
-                                <li class="subnav-cont">
-                                    <header class="subnav-header">
-                                        Stores 
-                                        <div class="nav-img">
-                                            <img src="./images/down-arrow.svg" class="nav-arrow">
-                                        </div>
-                                    </header>
-                                    <ul class="sub-nav">
-                                    <li> <a href="./makerspace.html#store">Laser Store</a> </li>
-                                    <li> <a href="./estore.html">Electronics Store</a> </li>
-                                    <li> <a href="./WorkSpace.html#prices">Workspace Prices</a></li>
-                                </ul>
-                            </li>
+  <header class="main-header">
+    <div class="container">
+        <nav class="main-nav">
+            <div class="row">
+                <div class="logo">
+                    <a href="#">
+                        <div class="row">
+                            <img src="./images/white_logo.png" class="logo-img" alt="Supernova" title="Supernova title">
+                        <span>
+                            Supernova
+                        </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="nav-links">
+                    <ul class="nav-ul">
+                        <div class="row">
+                            <li><a href="/">home</a></li>
                             <li class="subnav-cont">
                                 <header class="subnav-header">
-                                    Rooms
+                                    Stores 
                                     <div class="nav-img">
                                         <img src="./images/down-arrow.svg" class="nav-arrow">
                                     </div>
                                 </header>
                                 <ul class="sub-nav">
-                                    <li> <a href="./WorkSpace.html">Workspace</a> </li>
-                                    <li> <a href="./makerspace.html">Maker Space</a> </li>
-                                    <li> <a href="./elmakan.html">Elmakan Systems</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./event.html">events</a></li>
-                            <li><a href="./Contact.html">contact</a></li>
-                        </div>
-                        </ul>
+                                <li> <a href="./makerspace.html#store">Laser Store</a> </li>
+                                <li> <a href="./estore.html">Electronics Store</a> </li>
+                                <li> <a href="./workspace.html#prices">Workspace Prices</a></li>
+                            </ul>
+                        </li>
+                        <li class="subnav-cont">
+                            <header class="subnav-header">
+                                Rooms
+                                <div class="nav-img">
+                                    <img src="./images/down-arrow.svg" class="nav-arrow">
+                                </div>
+                            </header>
+                            <ul class="sub-nav">
+                                <li> <a href="./workspace.html">Workspace</a> </li>
+                                <li> <a href="./makerspace.html">Maker Space</a> </li>
+                                <li> <a href="./elmakan.html">Elmakan Systems</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="./events.html">events</a></li>
+                        <li><a href="./contact.html">contact</a></li>
                     </div>
-                    <div class="menu-btn">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
+                    </ul>
                 </div>
-            </nav>
-        </div>
-    </header>
+                <div class="menu-btn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </nav>
+    </div>
+</header>
     <main>
         <section class="CF_section_1">
             
