--- a/estore.html
+++ b/estore.html
@@ -40,7 +40,7 @@
                                     <ul class="sub-nav">
                                     <li> <a href="./makerspace.html#store">Laser Store</a> </li>
                                     <li> <a href="./estore.html">Electronics Store</a> </li>
-                                    <li> <a href="./WorkSpace.html#prices">Workspace Prices</a></li>
+                                    <li> <a href="./workspace.html#prices">Workspace Prices</a></li>
                                 </ul>
                             </li>
                             <li class="subnav-cont">
@@ -51,13 +51,13 @@
                                     </div>
                                 </header>
                                 <ul class="sub-nav">
-                                    <li> <a href="./WorkSpace.html">Workspace</a> </li>
+                                    <li> <a href="./workspace.html">Workspace</a> </li>
                                     <li> <a href="./makerspace.html">Maker Space</a> </li>
                                     <li> <a href="./elmakan.html">Elmakan Systems</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./event.html">events</a></li>
-                            <li><a href="./Contact.html">contact</a></li>
+                            <li><a href="./events.html">events</a></li>
+                            <li><a href="./contact.html">contact</a></li>
                         </div>
                         </ul>
                     </div>
