--- a/workSpace.html
+++ b/workSpace.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="./styles/nav.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/resnav.css">
-    <!-- <meta name="description" content=""> -->
-    <title> WorkSpace | Supernova </title>
+    <title> Workspace | Supernova </title>
 </head>
 <body>
     <header class="main-header">
@@ -42,7 +41,7 @@
                                     <ul class="sub-nav">
                                     <li> <a href="./makerspace.html#store">Laser Store</a> </li>
                                     <li> <a href="./estore.html">Electronics Store</a> </li>
-                                    <li> <a href="./WorkSpace.html#prices">Workspace Prices</a></li>
+                                    <li> <a href="./workspace.html#prices">Workspace Prices</a></li>
                                 </ul>
                             </li>
                             <li class="subnav-cont">
@@ -53,13 +52,13 @@
                                     </div>
                                 </header>
                                 <ul class="sub-nav">
-                                    <li> <a href="./WorkSpace.html">Workspace</a> </li>
+                                    <li> <a href="./workspace.html">Workspace</a> </li>
                                     <li> <a href="./makerspace.html">Maker Space</a> </li>
                                     <li> <a href="./elmakan.html">Elmakan Systems</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./event.html">events</a></li>
-                            <li><a href="./Contact.html">contact</a></li>
+                            <li><a href="./events.html">events</a></li>
+                            <li><a href="./contact.html">contact</a></li>
                         </div>
                         </ul>
                     </div>
@@ -73,7 +72,6 @@
         </div>
     </header>
     <main>
-        <!-- WS = WorkSpace  -->
         <section class="ws_section_1">
             <div class="container">
                 <div class="definition">
@@ -473,6 +471,5 @@
         </div>
       </footer>
     <script src="./script/nav.js"></script>
-
 </body>
 </html>
